--- a/client-frontend/src/pages/Main/index.css
+++ b/client-frontend/src/pages/Main/index.css
@@ -262,7 +262,7 @@
 }
 
 .child_testimonial h3{
-  background: url(../../images/testimonial_bg.png);
+  background: url(../../assests/images/testimonial_bg.png);
   background-repeat: no-repeat;
   padding: 10px 0 10px 65px;
   color: #989898;
